z-indexes fixed

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -38,6 +38,7 @@
   border: none;
   outline: none;
   box-shadow: 0 0 4px rgba(0,0,0, 0.3);
+  z-index: 2;
 }
 
 .table-button:hover {
