--- a/scss/_large-screen.scss
+++ b/scss/_large-screen.scss
@@ -52,6 +52,8 @@
       display: flex;
       .selection-box{
         .button-select-box{
+          position: absolute;
+          left: 0;
           top: 75px;
           div {
             padding: 15px 25px;
