--- a/scss/_medium-screen.scss
+++ b/scss/_medium-screen.scss
@@ -65,7 +65,9 @@
       justify-content: space-around;
       .selection-box{
         .button-select-box{
+          position: absolute;
           top: 68px;
+          left: 0;
           div {
             padding: 10px 20px;
             font-size: 16px;
