--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -26,8 +26,6 @@
       .button-select-box{
         width: 100%;
         border-radius: 0 0 20px 20px;
-        position: absolute;
-        left: 0;
         background-color: #ffffff;
         box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
         flex-direction: column;
